Opened 15 years ago
Closed 15 years ago
#736 closed defect (fixed)
ffplay fullscreen toggle issue - fix included
| Reported by: | Gary Langshaw | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | ffplay |
| Version: | git-master | Keywords: | fullscreen |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Incorrect condition match and return in video_open()
when toggling to fullscreen a video window which
already matches the display resolution.
e.g. a 1920x1080 HD stream in a -geometry 1920x1080+0+22 window
on a 1920x1080 display.
diff attached
Attachments (1)
Change History (5)
by , 15 years ago
| Attachment: | ffplay-fix-fullscreen_toggle.diff added |
|---|
comment:1 by , 15 years ago
| Keywords: | ffplay removed |
|---|
comment:2 by , 15 years ago
Thanks for the suggestion, but I don't want to get involved on the dev list - I'm just an end user who knows a little C making a one-off submission. The contacts page of the website clearly says that list is not for bug reports so this seemed the appropriate place for it.
comment:4 by , 15 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
| Version: | 0.9 → git-master |
Note:
See TracTickets
for help on using tickets.



Please consider posting patches to ffmpeg-devel where they usually receive more attraction.