ffplay: force setting video mode on fullscreen toggle

Fixes ticket #736. Based on the patch by glangshaw.

Signed-off-by: Marton Balint <cus@passwd.hu>